@@ -1,3 +1,9 @@
+2011-01-31  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/47042
+	* interface.c (gfc_procedure_use): Add explicit interface check for
+	pointer/allocatable functions.
+
 2011-01-30  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/47523
